# 30_Homework_3

./: CMakeLists.txt
include/: Function.h
src/: CMakeLists.txt  function.cpp  main.cpp
